[package]
name    = "process-monitor"
version = "0.1.0"
edition = "2024"

# ── Crate targets ─────────────────────────────────────────────────────────────

[lib]
name = "process_monitor"
path = "src/lib.rs"

[[bin]]
name = "process-monitor"
path = "src/main.rs"

[[bin]]
name = "system-monitor"
path = "src/bin/system_monitor.rs"

# ── cross-platform deps ───────────────────────────────────────────────────────
[dependencies]
anyhow               = "1"
chrono               = { version = "0.4", features = ["serde"] }
clap                 = { version = "4",   features = ["derive"] }
crossbeam-channel    = "0.5"
ctrlc                = { version = "3",   features = ["termination"] }
notify-debouncer-mini = "0.4"
num_cpus             = "1"
parking_lot          = "0.12"
serde                = { version = "1",   features = ["derive"] }
serde_json           = "1"
sysinfo              = "0.31"

# ── Windows-only deps ─────────────────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

# ── release profile: small, stripped binary ───────────────────────────────────
[profile.release]
opt-level = 3
strip     = true
lto       = true
