[package]
name    = "process-monitor"
version = "0.1.0"
edition = "2024"

# ── Crate targets ─────────────────────────────────────────────────────────────

[lib]
name = "process_monitor"
path = "src/lib.rs"

[[bin]]
name = "process-monitor"
path = "src/bin/process_monitor.rs"

[[bin]]
name = "system-monitor"
path = "src/bin/system_monitor.rs"

[[bin]]
name = "monitor-ui"
path = "src/bin/monitor_ui.rs"

[[bin]]
name = "go2rtc-monitor"
path = "src/bin/go2rtc_monitor.rs"

[[bin]]
name = "monitor-watchdog"
path = "src/bin/monitor_watchdog.rs"

# ── cross-platform deps ───────────────────────────────────────────────────────
[dependencies]
anyhow               = "1"
chrono               = { version = "0.4", features = ["serde"] }
clap                 = { version = "4",   features = ["derive"] }
crossbeam-channel    = "0.5"
ctrlc                = { version = "3",   features = ["termination"] }
notify-debouncer-mini = "0.4"
num_cpus             = "1"
nvml-wrapper         = { version = "0.10", optional = true }
eframe               = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
parking_lot          = "0.12"
serde                = { version = "1",   features = ["derive"] }
serde_json           = "1"
sysinfo              = "0.31"
ureq             = "2"

# ── Windows-only deps ─────────────────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

# ── Features ──────────────────────────────────────────────────────────────────
[features]
# Enable to add NVIDIA GPU monitoring via NVML (requires NVIDIA driver).
nvidia = ["nvml-wrapper"]

# ── release profile: small, stripped binary ───────────────────────────────────
[profile.release]
opt-level = 3
strip     = true
lto       = true
